tests/files/parser_tests/should_fail/012.cmdr
//Should not parse due to unterminated array
x = [1, 2;